package AJUserInterface.AJImageController;

import java.io.InputStream;

public interface AJImageDesign {

    public InputStream AJGetPathImage();
}
